--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^3.4.1",
+    "keycloak-angular": "^7.1.0",
+    "keycloak-js": "^8.0.1",
     "rxjs": "^6.5.3",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.10.0",
@@ -50,7 +52,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.20",
-    "@angular-devkit/build-angular": "^0.803.20",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular-devkit/core": "^8.3.20",
     "@angular-devkit/schematics": "^8.3.20",
     "@angular/cli": "^8.3.20",
@@ -58,7 +60,7 @@
     "@angular/compiler-cli": "8.2.13",
     "@angular/language-service": "~8.2.14",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@ionic/lab": "^2.0.18",
+    "@ionic/lab": "^2.0.19",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^12.12.17",
